--- a/package.json
+++ b/package.json
@@ -6,52 +6,62 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "host": "cd dist && surge"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/cuduy197/nganhangcauhoi.git"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "element-ui": "^1.2.8",
     "material-design-lite": "^1.3.0",
-    "vue": "^2.2.2",
-    "vue-router": "^2.3.0"
+    "node-sass": "^4.5.2",
+    "vue": "^2.2.6",
+    "vue-router": "^2.4.0",
+    "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.24.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
+    "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "firebase": "^3.7.6",
-    "friendly-errors-webpack-plugin": "^1.1.3",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.17.4",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
+    "ora": "^1.2.0",
     "pug": "^2.0.0-beta11",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.7.7",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.4",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
+    "vue-template-compiler": "^2.2.6",
     "vuex": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack": "^2.3.3",
+    "webpack-bundle-analyzer": "^2.4.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
