--- a/package.json
+++ b/package.json
@@ -1,75 +1,78 @@
 {
-  "name": "nganhangcauhoi",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "Bùi Khương Duy <cuduy197@gmail.com>",
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "host": "cd dist && surge"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/cuduy197/nganhangcauhoi.git"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "element-ui": "^1.2.8",
-    "material-design-lite": "^1.3.0",
-    "node-sass": "^4.5.2",
-    "vue": "^2.2.6",
-    "vue-router": "^2.4.0",
-    "vuex-router-sync": "^4.1.2"
-  },
-  "devDependencies": {
-    "animate.css": "^3.5.2",
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.3.3",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "firebase": "^3.7.6",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.4",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.2.0",
-    "pug": "^2.0.0-beta11",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.3",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.7",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
-    "vuex": "^2.2.1",
-    "webpack": "^2.3.3",
-    "webpack-bundle-analyzer": "^2.4.0",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "name": "nganhangcauhoi",
+    "version": "1.0.0",
+    "description": "A Vue.js project",
+    "author": "Bùi Khương Duy <cuduy197@gmail.com>",
+    "scripts": {
+        "dev": "node build/dev-server.js",
+        "start": "node build/dev-server.js",
+        "build": "node build/build.js",
+        "build_go": "node build/build.js && node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
+        "host": "node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
+        "url": "opn http://nhch.surge.sh "
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/cuduy197/nganhangcauhoi.git"
+    },
+    "dependencies": {
+        "babel-polyfill": "^6.23.0",
+        "element-ui": "^1.2.8",
+        "material-design-lite": "^1.3.0",
+        "vue": "^2.2.6",
+        "vue-router": "^2.4.0",
+        "vuex-router-sync": "^4.1.2"
+    },
+    "devDependencies": {
+        "fs.extra": "^1.3.2",
+        "node-sass": "^4.5.2",
+        "animate.css": "^3.5.2",
+        "autoprefixer": "^6.7.7",
+        "babel-core": "^6.24.1",
+        "babel-loader": "^6.4.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.3.3",
+        "babel-preset-stage-0": "^6.24.1",
+        "babel-register": "^6.24.1",
+        "chalk": "^1.1.3",
+        "connect-history-api-fallback": "^1.3.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.28.0",
+        "eventsource-polyfill": "^0.9.6",
+        "express": "^4.15.2",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.11.1",
+        "firebase": "^3.7.6",
+        "friendly-errors-webpack-plugin": "^1.6.1",
+        "html-webpack-plugin": "^2.28.0",
+        "http-proxy-middleware": "^0.17.4",
+        "opn": "^4.0.2",
+        "optimize-css-assets-webpack-plugin": "^1.3.0",
+        "ora": "^1.2.0",
+        "pug": "^2.0.0-beta11",
+        "rimraf": "^2.6.1",
+        "sass-loader": "^6.0.3",
+        "semver": "^5.3.0",
+        "shelljs": "^0.7.7",
+        "url-loader": "^0.5.8",
+        "vue-loader": "^11.3.4",
+        "vue-style-loader": "^2.0.5",
+        "vue-template-compiler": "^2.2.6",
+        "vuex": "^2.2.1",
+        "webpack": "^2.3.3",
+        "webpack-bundle-analyzer": "^2.4.0",
+        "webpack-dev-middleware": "^1.10.1",
+        "webpack-hot-middleware": "^2.18.0",
+        "webpack-merge": "^4.1.0"
+    },
+    "engines": {
+        "node": ">= 4.0.0",
+        "npm": ">= 3.0.0"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
 }
