--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "A Vue.js project",
     "author": "Bùi Khương Duy <cuduy197@gmail.com>",
     "scripts": {
+        "gs": "git status",
+        "ga": "git add .",
+        "gc": "git commit -m",
+        "gp": "git push origin master",
         "dev": "node build/dev-server.js",
         "start": "node build/dev-server.js",
         "build": "node build/build.js",
