Cập nhật npm run

--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "description": "A Vue.js project",
     "author": "Bùi Khương Duy <cuduy197@gmail.com>",
     "scripts": {
-        "g": "git status",
-        "gs": "git status",
-        "ga": "git add .",
-        "gc": "git add . && git commit -m",
-        "gp": "git push origin master",
-        "dev": "node build/dev-server.js",
+        "git": "git status",
+        "add": "git add .",
+        "pull": "git pull",
+        "commit": "git add . && git commit -m",
+        "push": "git push origin master",
         "start": "node build/dev-server.js",
-        "build": "node build/build.js",
-        "build_go": "node build/build.js && node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
+        "build": "node build/build.js && node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
         "host": "node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
         "url": "opn http://nhch.surge.sh "
     },
