--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "A Vue.js project",
     "author": "Bùi Khương Duy <cuduy197@gmail.com>",
     "scripts": {
+        "savepass": "git config --global credential.helper 'cache --timeout=36000'",
         "git": "git status",
         "add": "git add .",
         "pull": "git reset --hard HEAD && git pull",
