--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "commit": "git add . && git commit -m",
         "push": "git push origin master",
         "start": "node build/dev-server.js",
-        "build": "node build/build.js && node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
+        "build": "node build/build.js && node build/copy200.js && cd dist && surge",
         "host": "node build/copy200.js && cd dist && surge && cd .. && node build/openUrl",
         "url": "opn http://nhch.surge.sh "
     },
@@ -22,16 +22,16 @@
     },
     "dependencies": {
         "babel-polyfill": "^6.23.0",
-        "element-ui": "^1.2.9",
-        "vue": "^2.2.6",
-        "vue-router": "^2.5.2",
+        "element-ui": "^1.3.1",
+        "vue": "^2.3.2",
+        "vue-router": "^2.5.3",
         "vuex-router-sync": "^4.1.2"
     },
     "devDependencies": {
         "fs.extra": "^1.3.2",
         "node-sass": "^4.5.2",
         "animate.css": "^3.5.2",
-        "autoprefixer": "^6.7.7",
+        "autoprefixer": "^7.0.1",
         "babel-core": "^6.24.1",
         "babel-loader": "^7.0.0",
         "babel-plugin-transform-runtime": "^6.23.0",
@@ -41,7 +41,7 @@
         "chalk": "^1.1.3",
         "connect-history-api-fallback": "^1.3.0",
         "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.0",
+        "css-loader": "^0.28.1",
         "eventsource-polyfill": "^0.9.6",
         "express": "^4.15.2",
         "extract-text-webpack-plugin": "^2.1.0",
@@ -50,21 +50,21 @@
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.4",
-        "opn": "^4.0.2",
+        "opn": "^5.0.0",
         "optimize-css-assets-webpack-plugin": "^1.3.1",
         "ora": "^1.2.0",
-        "pug": "^2.0.0-beta11",
+        "pug": "^2.0.0-rc.1",
         "rimraf": "^2.6.1",
         "sass-loader": "^6.0.3",
         "semver": "^5.3.0",
         "shelljs": "^0.7.7",
         "url-loader": "^0.5.8",
-        "vue-loader": "^11.3.4",
+        "vue-loader": "^12.0.3",
         "vue-style-loader": "^3.0.1",
-        "vue-template-compiler": "^2.2.6",
+        "vue-template-compiler": "^2.3.2",
         "vuex": "^2.3.1",
-        "webpack": "^2.4.1",
-        "webpack-bundle-analyzer": "^2.4.0",
+        "webpack": "^2.5.1",
+        "webpack-bundle-analyzer": "^2.6.0",
         "webpack-dev-middleware": "^1.10.2",
         "webpack-hot-middleware": "^2.18.0",
         "webpack-merge": "^4.1.0"
