--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
 node_js:
   - "6"
-install:
+notifications:
+  email: false
+before_install:
   npm install -g surge
+install:
   npm install
 script:
   npm run build
+release:
+  - exit 0  
