Cập nhật Travis CI :tada:

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "commit": "git add . && git commit -m",
         "push": "git push origin master",
         "start": "node build/dev-server.js",
-        "build": "node build/build.js && node build/copy200.js &&  surge --project ./dist --domain cauhoi.cunghoctot.net ",
+        "build": "node build/build.js && node build/copy200.js ",
         "host": "node build/copy200.js &&  surge --project ./dist --domain cauhoi.cunghoctot.net && node build/openUrl",
         "url": "opn http://cauhoi.cunghoctot.net "
     },
