--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,10 @@ cache:
     - node_modules
 script:
   npm run build
+deploy:
+  provider: surge
+  script: npm run build
+  project: ./dist/
+  domain: ch.cunghoctot.net
 release:
   - exit 0  
