--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
         "vuex-router-sync": "^4.1.2"
     },
     "devDependencies": {
-        "fs.extra": "^1.3.2",
-        "node-sass": "^4.5.2",
         "animate.css": "^3.5.2",
         "autoprefixer": "^7.0.1",
         "babel-core": "^6.24.1",
@@ -39,6 +37,7 @@
         "babel-preset-stage-0": "^6.24.1",
         "babel-register": "^6.24.1",
         "chalk": "^1.1.3",
+        "compression-webpack-plugin": "^0.4.0",
         "connect-history-api-fallback": "^1.3.0",
         "copy-webpack-plugin": "^4.0.1",
         "css-loader": "^0.28.1",
@@ -48,8 +47,10 @@
         "file-loader": "^0.11.1",
         "firebase": "^3.9.0",
         "friendly-errors-webpack-plugin": "^1.6.1",
+        "fs.extra": "^1.3.2",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.4",
+        "node-sass": "^4.5.2",
         "opn": "^5.0.0",
         "optimize-css-assets-webpack-plugin": "^1.3.1",
         "ora": "^1.2.0",
